--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
         "jquery": "2.1.3",
         "bootstrap": "3.3.4",
         "angular": "1.3.15",
-        "angular-route": "1.3.15",
-        "angular-mocks": "1.3.15",
         "requirejs": "2.1.17",
         "gridster": "0.5.6",
         "express": "4.13.0",
-        "jade": "1.11.0"
+        "lodash": "3.10.0"
     }
 }
